@@ -1035,8 +1035,12 @@ AC_SEARCH_LIBS([cos], [m],
 
 # Checks for header files
 
+# Don't check for unistd.h on Windows
+AS_CASE([$host],
+  [*-*-mingw32*|*-pc-windows], [],
+  [AC_CHECK_HEADERS([unistd.h],[AC_DEFINE([HAS_UNISTD])])])
+
 AC_CHECK_HEADER([math.h])
-AC_CHECK_HEADERS([unistd.h],[AC_DEFINE([HAS_UNISTD])])
 AC_CHECK_HEADER([stdint.h],[AC_DEFINE([HAS_STDINT_H])])
 AC_CHECK_HEADER([pthread_np.h],[AC_DEFINE([HAS_PTHREAD_NP_H])])
 AC_CHECK_HEADER([dirent.h], [AC_DEFINE([HAS_DIRENT])], [],
